--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   fluttertoast: ^8.1.1
   lottie: ^1.4.3
   carousel_slider: ^4.1.1
+  eva_icons_flutter:
+  flutter_svg:
+  font_awesome_flutter:
+  google_fonts:
+  google_nav_bar:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,6 +70,7 @@ flutter:
   assets:
     - assets/images/
     - assets/animation/
+    - assets/svg/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
