--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter:
   google_fonts:
   google_nav_bar:
+  flutter_draggable_gridview: ^0.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -72,6 +73,7 @@ flutter:
     - assets/animation/
     - assets/svg/
     - assets/hotelrooms/
+    - assets/ecommerce/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
